--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,3 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-_tkinter_pymol=1=py37hfa6e2cd_0
-apbs=1.5=1
-asn1crypto=1.4.0=py_0
-blas=1.0=mkl
-bzip2=1.0.6=hfa6e2cd_5
-ca-certificates=2021.1.19=haa95532_1
-certifi=2020.12.5=py37haa95532_0
-cffi=1.11.5=py37h74b6da3_1
-chardet=4.0.0=py37haa95532_1003
-cryptography=2.3.1=py37h74b6da3_0
-curl=7.61.1=h7602738_0
-cycler=0.10.0=py37_0
-decorator=4.4.2=pyhd3eb1b0_0
-freemol=1.158=py_2
-freetype=2.9.1=ha9979f8_1
-glew=2.0.0=vc14_0
-h5py=2.8.0=py37h3bdd7fb_2
-hdf4=4.2.13=h712560f_2
-hdf5=1.10.2=hac2f561_1
-icc_rt=2019.0.0=h0cc432a_1
-icu=58.2=ha66f8fd_1
-idna=2.10=pyhd3eb1b0_0
-intel-openmp=2020.2=254
-jpeg=9b=hb83a4c4_2
-kiwisolver=1.0.1=py37h6538335_0
-libcurl=7.61.1=h7602738_0
-libholoplaycore=0.1.0_rc4=0
-libiconv=1.15=h1df5818_7
-libnetcdf=4.6.1=h70ac11d_1
-libpng=1.6.34=h79bbb47_0
-libssh2=1.8.0=hd619d38_4
-libtiff=4.0.9=h36446d0_2
-libxml2=2.9.8=hadb2253_1
-matplotlib=3.0.0=py37hd159220_0
-mengine=1=0
-mkl=2018.0.3=1
-mkl_fft=1.0.6=py37hdbbee80_0
-mkl_random=1.0.1=py37h77b88f5_1
-mpeg_encode=1=0
-mtz2ccp4_px=1.0=1
-networkx=2.5.1=pyhd3eb1b0_0
-numpy=1.15.4=py37ha559c80_0
-numpy-base=1.15.4=py37h8128ebf_0
-olefile=0.46=py_0
-openssl=1.0.2p=hfa6e2cd_0
-openvr=1.0.17=0
-pdb2pqr=2.1.2+pymol=py_0
-pillow=5.2.0=py37h08bbbbd_0
-pip=21.0.1=py37haa95532_0
-pmw=2.0.1+3=py_3
-pycparser=2.20=py_2
-pymol=2.4.1=py37he0dc0a8_0
-pyopenssl=19.0.0=py37_0
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py37h6538335_2
-pysocks=1.7.1=py37_1
-python=3.7.0=hea74fb7_0
-python-dateutil=2.8.1=pyhd3eb1b0_0
-pytz=2021.1=pyhd3eb1b0_0
-qt=5.9.6=vc14h62aca36_0
-requests=2.25.1=pyhd3eb1b0_0
-rigimol=1.3=2
-scipy=1.1.0=py37h4f6bf74_1
-setuptools=52.0.0=py37haa95532_0
-sip=4.19.8=py37h6538335_0
-six=1.15.0=pyhd3eb1b0_0
-sqlite=3.25.2=hfa6e2cd_0
-tbb=2018.0.5=he980bc4_0
-tbb4py=2018.0.5=py37he980bc4_0
-tk=8.6.8=hfa6e2cd_0
-tornado=5.1.1=py37hfa6e2cd_0
-urllib3=1.25.8=py37_0
-vc=14=h21ff451_11
-vs2013_runtime=12.0.21005=1
-vs2015_runtime=14.27.29016=h5e58377_2
-wheel=0.36.2=pyhd3eb1b0_0
-win_inet_pton=1.1.0=py37haa95532_0
-wincertstore=0.2=py37_0
-zlib=1.2.11=h8395fce_2
+biopython
+numpy
+taichi
